refactor(vendix): moved store and register ownership to orchestrator, instead of being handled by the stores themselves
feat(monitoring): added labels to loki log appender

feat(monitoring): added labels to prometheus sd-file
