# commons/api/src/main/resources/openapi/store.yaml
@@ -10,8 +10,6 @@ tags:
     description: Operations related to Articles
   - name: Receipt
     description: Operations related to Receipts
-  - name: Store
-    description: Operations related to Stores
 
 security:
   - bearerAuth: [ ]
@@ -110,100 +108,6 @@ paths:
               schema:
                   $ref: "#/components/schemas/ReceiptDTO"
 
-  /api/store/:
-    get:
-      operationId: getStores
-      description: d
-      tags:
-        - Store
-      parameters:
-        - in: query
-          name: id
-          required: false
-          description: d
-          schema:
-            type: integer
-            format: int64
-        - in: query
-          name: country
-          required: false
-          description: d
-          schema:
-            type: string
-        - in: query
-          name: city
-          required: false
-          description: d
-          schema:
-            type: string
-        - in: query
-          name: street
-          required: false
-          description: d
-          schema:
-            type: string
-      responses:
-        200:
-          description: d
-          content:
-            application/json:
-              schema:
-                type: array
-                uniqueItems: true
-                items:
-                  $ref: "#/components/schemas/StoreDTO"
-
-  /api/store/id/{id}:
-    get:
-      operationId: getStoreById
-      description: d
-      tags:
-        - Store
-      parameters:
-        - in: path
-          name: id
-          required: true
-          description: d
-          schema:
-            type: integer
-            format: int64
-      responses:
-        200:
-          description: d
-          content:
-            application/json:
-              schema:
-                  $ref: "#/components/schemas/StoreDTO"
-        404:
-          description: d
-
-  /api/store/id/{id}/registers/:
-    get:
-      operationId: getRegistersByStore
-      description: d
-      tags:
-        - Store
-      parameters:
-        - in: path
-          name: id
-          required: true
-          description: d
-          schema:
-            type: integer
-            format: int64
-      responses:
-        200:
-          description: d
-          content:
-            application/json:
-              schema:
-                type: array
-                uniqueItems: true
-                items:
-                  $ref: "#/components/schemas/RegisterDTO"
-        404:
-          description: d
-
 components:
   securitySchemes:
     bearerAuth:
@@ -256,36 +160,12 @@ components:
         id:
           type: integer
           format: int64
-        store:
-          $ref: "#/components/schemas/StoreDTO"
-        register:
-          $ref: "#/components/schemas/RegisterDTO"
+        storeId:
+          type: integer
+          format: int64
+        registerId:
+          type: integer
+          format: int64
         cashierId:
           type: integer
           format: int64
-
-    StoreDTO:
-      type: object
-      description: d
-      properties:
-        id:
-          type: integer
-          format: int64
-        country:
-          type: string
-        city:
-          type: string
-        street:
-          type: string
-        streetNumber:
-          type: string
-
-    RegisterDTO:
-      type: object
-      description: d
-      properties:
-        id:
-          type: integer
-          format: int64
-        store:
-          $ref: "#/components/schemas/StoreDTO"
