# orchestrator/core/src/main/java/de/fhdw/vendix/orchestrator/core/domain/register/RegisterDTOMapper.java
@@ -1,11 +1,11 @@
-package de.fhdw.vendix.store.core.domain.register;
+package de.fhdw.vendix.orchestrator.core.domain.register;
 
 import de.fhdw.vendix.commons.api.structure.mapper.DTOMapper;
 import de.fhdw.vendix.commons.api.domain.register.RegisterDTO;
 import de.fhdw.vendix.commons.api.domain.register.RegisterRequestDTO;
 import de.fhdw.vendix.commons.api.domain.register.RegisterResponseDTO;
 import de.fhdw.vendix.commons.spring.data.mapper.SpringMapperConfig;
-import de.fhdw.vendix.store.core.domain.store.StoreDTOMapper;
+import de.fhdw.vendix.orchestrator.core.domain.store.StoreDTOMapper;
 import org.mapstruct.Mapper;
 
 import java.util.Set;
